# lmms-claude-mcp-improved

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
lmms_mcp/: cli.py  lmms_interface.py  server.py
tests/: __init__.py  test_server.py
